--- a/autoscalingGroups.yaml
+++ b/autoscalingGroups.yaml
@@ -15,11 +15,10 @@ Resources:
         ImageId: ami-0557a15b87f6559cf
         InstanceType: t2.micro
         UserData:
-          Fn::Base64:
-            !Sub |
-              #!/bin/bash
-              sudo apt update
-              sudo apt install apache2
+          Fn::Base64: !Sub | 
+            #!/bin/bash
+            sudo apt update
+            sudo apt install -y apache2
       
 
   MyASG:
